# unblock-me-solver

./: .gitignore  Block.cpp  Block.h  Board.cpp  Board.h  CMakeLists.txt  README.md  Solver.cpp  Solver.h  globals.h  main.cpp  output.txt
data/: input.txt  output.txt
src/: Block.cpp  Block.h  Board.cpp  Board.h  Solver.cpp  Solver.h  globals.h  main.cpp
